release: 1.2.5